[package]
name = "torahiko"
version = "0.1.0"
authors = ["Chehui Chou <deadshot465@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0.38"
env_logger = "~0.8.2"
dotenv = "~0.15.0"
log = "~0.4.14"
once_cell = "~1.5.2"
rand = "~0.8.3"
regex = "~1.4.3"
reqwest = "~0.11.0"
serde = "~1.0.123"
serde_json = "~1.0.62"
serenity = { version = "~0.10.2", features = ["collector", "unstable_discord_api"] }
tokio = { version = "~1.2.0", features = ["full"] }