[package]
name = "torahiko"
version = "0.1.0"
authors = ["Chehui Chou <deadshot465@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0.40"
env_logger = "~0.8.2"
dashmap = "~4.0.2"
dotenv = "~0.15.0"
log = "~0.4.14"
once_cell = "~1.7.2"
rand = "~0.8.3"
regex = "~1.4.5"
reqwest = "~0.11.3"
serde = "~1.0.125"
serde_json = "~1.0.64"
serenity = { version = "~0.10.5", features = ["collector", "unstable_discord_api"] }
tokio = { version = "~1.5.0", features = ["full"] }

[profile.dev]
split-debuginfo = "unpacked"